--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,3 +42,6 @@ set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215
 
 # vim esc delay fix
 set -s escape-time 0
+
+set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",screen-256color:Tc"
