--- a/kitty.conf
+++ b/kitty.conf
@@ -223,8 +223,8 @@ enable_audio_bell no
 #: Window layout {{{
 
 remember_window_size  no
-# initial_window_width  640
-# initial_window_height 400
+initial_window_width  80c
+initial_window_height 24c
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
