--- a/kitty.conf
+++ b/kitty.conf
@@ -22,7 +22,11 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12.0
+font_size 16.9
+#: font_family Terminus
+font_family Envy Code R
+adjust_line_height 0
+adjust_column_width 0
 
 #: Font size (in pts)
 
@@ -518,7 +522,7 @@ color15 #e4e4e4
 
 #: OS specific tweaks {{{
 
-macos_titlebar_color #212121 
+macos_titlebar_color background
 
 #: Change the color of the kitty window's titlebar on macOS. A value
 #: of system means to use the default system color, a value of
@@ -553,7 +557,7 @@ macos_titlebar_color #212121
 
 #: Hide the kitty window from running tasks (Option+Tab) on macOS.
 
-# macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed yes
 
 #: Have kitty quit when all the top-level windows are closed. By
 #: default, kitty will stay running, even with no open windows, as is
